--- a/src/BodyLeftside.module.css
+++ b/src/BodyLeftside.module.css
@@ -38,6 +38,7 @@
 }
 
 .increasesize1 {
+
   max-height: 0;
   overflow: hidden;
   transform: scaleY(0);
@@ -53,6 +54,7 @@
    border-bottom-Right-radius: 10px;
   
 }
+
 .increasesize2 {
    position: relative;
    bottom: 5px;
@@ -76,9 +78,13 @@
 .div2 {
     width: 100%;
     height: 550px;
-    overflow-y: scroll;
-    
+    overflow-y: scroll; 
 }
+.div2 ul a{
+    text-decoration: none;
+}
+
+
 
 .div2::-webkit-scrollbar {
     width: 7px;
@@ -98,7 +104,9 @@
 .increasesize {
     width: 100%;
     height: 630px;
+
 }
+
 .div2 ul li {
     display: flex;
     align-items: center;
@@ -106,6 +114,7 @@
     width: 100%;
     height: 40px;
     border-radius: 10px;
+    
 }
 
 .div2 ul li:hover {
