--- a/src/BodyLeftside.module.css
+++ b/src/BodyLeftside.module.css
@@ -37,24 +37,12 @@
   
 }
 
-.increasesize1 {
 
-  max-height: 0;
-  overflow: hidden;
-  transform: scaleY(0);
-  transform-origin: top;
-  background-color: rgb(179, 165, 174, 0.2);
-  opacity: 0;
-  transition: 
-    max-height 0.6s ease-in-out,
-    transform 0.6s ease-in-out,
-    opacity 0.5s ease-in-out;
 
-   border-bottom-left-radius: 10px;
-   border-bottom-Right-radius: 10px;
-  
+.increasesize1
+{
+max-height: 0px;
 }
-
 .increasesize2 {
    position: relative;
    bottom: 5px;
@@ -66,8 +54,7 @@
 }
 .showDiv {
   max-height: 405px;
-  transform: scaleY(1);
-  opacity: 1;
+  
    background-color: rgb(179, 165, 174, 0.2);
    border-radius: 5px;
 }
@@ -114,7 +101,7 @@
     width: 100%;
     height: 40px;
     border-radius: 10px;
-    
+     
 }
 
 .div2 ul li:hover {
