--- a/src/Components/CRM.module.css
+++ b/src/Components/CRM.module.css
@@ -1,115 +1,124 @@
-*{
+* {
     padding: 0px;
     margin: 0px;
 }
-.div1
-{
+
+.div1 {
     display: flex;
     width: 81%;
     height: 650px;
     position: absolute;
     top: 72px;
     left: 298px;
-   
+
 }
-.div1a
-{
+
+.div1a {
     width: 93%;
-    height:650px;
-   
+    height: 650px;
+
+    overflow-y: scroll;
 }
-.div1abox1
-{
-    
+
+.div1a::-webkit-scrollbar {
+    width: 5px;
+}
+
+.div1abox1 {
+
     display: flex;
     align-items: end;
     width: 98%;
     height: 100px;
-    
+
     border-radius: 5px;
     margin-left: 10px;
+
 }
-.div1abox1 ul{
+
+.div1abox1 ul {
     width: 100%;
     height: 70px;
     list-style-type: none;
     display: flex;
-   
-  
+
+
 }
 
-.firstbutton
-{  display: flex;
-    justify-content:space-around;
+.firstbutton {
+    display: flex;
+    justify-content: space-around;
     align-items: center;
     width: 110px;
     height: 50px;
-    background-color: rgb(110,112,185);
+    background-color: rgb(110, 112, 185);
     border: none;
     outline: none;
     color: white;
-    
- 
+
+
 }
-.firstbutton span{
+
+.firstbutton span {
     font-size: 32px;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
 }
 
-.firstbutton svg
-{
-position: relative;
+.firstbutton svg {
+    position: relative;
 }
 
-.secondbutton
-{
+.secondbutton {
     margin-left: 25px;
     position: relative;
     top: 5px;
     width: 150px;
     height: 43px;
-     display: flex;
-     align-items: center;
-     justify-content: space-around;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
     border-radius: 15px;
-   border: none;
-   outline: none;
-   background-color: rgb(43,179,116);
-   color: lightgray;
+    border: none;
+    outline: none;
+    background-color: rgb(43, 179, 116);
+    color: lightgray;
 }
-.secondbutton span{
+
+.secondbutton span {
     font-size: large;
     color: white;
 }
-.thirdbutton
-{
+
+.thirdbutton {
     margin-left: 10px;
     display: flex;
-      position: relative;
+    position: relative;
     top: 5px;
-    justify-content:space-around;
-     align-items: center;
+    justify-content: space-around;
+    align-items: center;
     width: 150px;
     height: 43px;
     border-radius: 15px;
-   border: none;
-   outline: none;
-     color: white;
-      background-color: rgba(248, 246, 247, 0.2);
+    border: none;
+    outline: none;
+    color: white;
+    background-color: rgba(248, 246, 247, 0.2);
 }
-.thirdbutton:hover{
+
+.thirdbutton:hover {
     background-color: rgb(132, 154, 182);
 }
-.thirdbutton span{
+
+.thirdbutton span {
     font-size: 18px;
-  
+
 }
-.fourbutton
-{
+
+.fourbutton {
     margin-left: 10px;
-    display:flex;
-    justify-content:space-between;
+    display: flex;
+    justify-content: space-between;
     align-items: center;
     width: 95%;
     height: 43px;
@@ -118,32 +127,36 @@ position: relative;
     border: none;
     position: relative;
     top: 5px;
-   
-    color:white;
+
+    color: white;
     background-color: rgb(132, 154, 182);
 }
-.fourbutton:hover{
+
+.fourbutton:hover {
     background-color: rgb(132, 154, 182);
 }
-.fourbutton input{
+
+.fourbutton input {
     position: relative;
     left: 5px;
     display: flex;
-      width: 90%;
+    width: 90%;
     height: 43px;
     font-size: large;
     border-radius: 15px;
     background-color: white;
-     outline: none;
+    outline: none;
     border: none;
     color: white;
-     background-color: rgb(132, 154, 182);
+    background-color: rgb(132, 154, 182);
 
 }
-.fourbutton input:hover{
+
+.fourbutton input:hover {
     background-color: rgb(132, 154, 182);
 }
-.fivebutton{
+
+.fivebutton {
     position: relative;
     top: 5px;
     left: 30px;
@@ -153,29 +166,28 @@ position: relative;
     height: 43px;
     border-radius: 10px;
     background-color: rgba(248, 246, 247, 0.2);
-   
+
 }
 
-.problemcreate
-{
-   width: 650px;
-  
+.problemcreate {
+    width: 650px;
+
 }
 
-.fivebutton:hover{
-     background-color: rgb(132, 154, 182);
+.fivebutton:hover {
+    background-color: rgb(132, 154, 182);
 }
-.div1abox2
-{
+
+.div1abox2 {
     display: flex;
-     width: 98%;
+    width: 98%;
     height: 50px;
-   
+
     border-radius: 5px;
-    margin-left: 10px; 
+    margin-left: 10px;
 }
-.div1abox2a
-{
+
+.div1abox2a {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -184,16 +196,17 @@ position: relative;
 
 
 }
-.div1abox2a1
-{
+
+.div1abox2a1 {
     width: 48%;
     height: 35px;
     border-radius: 10px;
-     background-color: rgba(248, 246, 247, 0.2);
-    
+    background-color: rgba(248, 246, 247, 0.2);
+
 }
-.div1abox2a1 ul li{
-  
+
+.div1abox2a1 ul li {
+
     width: 100%;
     display: flex;
     align-items: center;
@@ -203,140 +216,157 @@ position: relative;
     color: white;
     font-size: 16px;
 }
-.kanban
-{
+
+.kanban {
     border-top-left-radius: 10px;
-      border-bottom-left-radius: 10px;
+    border-bottom-left-radius: 10px;
 }
-.calendar
-{
+
+.calendar {
     border-top-right-radius: 10px;
-      border-bottom-right-radius: 10px;
-      
+    border-bottom-right-radius: 10px;
+
 }
-.div1abox2a1 ul
-{
-    
+
+.div1abox2a1 ul {
+
     display: flex;
     list-style-type: none;
 }
-.div1abox2a1 ul li:hover{
-    background-color: rgb(190, 199, 212,0.3);
+
+.div1abox2a1 ul li:hover {
+    background-color: rgb(190, 199, 212, 0.3);
 
 }
-.div1abox2a2
-{   position: relative;
+
+.div1abox2a2 {
+    position: relative;
     right: 13px;
     width: 48%;
     height: 35px;
     border-radius: 10px;
     background-color: rgba(248, 246, 247, 0.2);
-    
+
 }
-.div1abox2a2 ul li{
-  
+
+.div1abox2a2 ul li {
+
     gap: 10px;
     width: 100%;
     display: flex;
     align-items: center;
-    justify-content:space-around;
+    justify-content: space-around;
     height: 35px;
     font-family: Arial, Helvetica, sans-serif;
     color: white;
     font-size: 16px;
 }
-.inbound
-{
- border-top-left-radius: 10px;
- border-bottom-left-radius: 10px;
+
+.inbound {
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
 }
-.more
-{
-  border-top-right-radius: 10px;
-  border-bottom-right-radius: 10px;
+
+.more {
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
 
 }
-.div1abox2a2 ul
-{
-    
+
+.div1abox2a2 ul {
+
     display: flex;
     list-style-type: none;
-    
+
 }
-.div1abox2a2 ul li:hover{
-    background-color: rgb(190, 199, 212,0.3);
-    
+
+.div1abox2a2 ul li:hover {
+    background-color: rgb(190, 199, 212, 0.3);
+
 }
-.div1abox2b
-{
+
+.div1abox2b {
     display: flex;
     align-items: center;
     justify-content: end;
     width: 40%;
     height: 50px;
-   
+
 }
-.div1abox2b1
-{
+
+.div1abox2b1 {
 
     margin-right: 10px;
-display: flex;
-align-items: center;
-justify-content: space-around;
-font-family: Arial, Helvetica, sans-serif;
-color: white;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
 
-  width: 37%;
-  height: 35px;
+    width: 37%;
+    height: 35px;
 
-  border-radius: 10px;
-  background-color: rgba(248, 246, 247, 0.2);
-
-}
-.div1abox2b1:hover{
-      background-color: rgb(190, 199, 212,0.3);
-}
-.div1abox2b2
-{
-  width: 25%;
-  height: 35px;
-
-  border-radius: 10px;
-  display: flex;
-align-items: center;
-justify-content: space-around;
-font-family: Arial, Helvetica, sans-serif;
-color: white;
-background-color: rgba(248, 246, 247, 0.2);
-
-
+    border-radius: 10px;
+    background-color: rgba(248, 246, 247, 0.2);
 
 }
-.div1abox2b2:hover{
-   background-color: rgb(190, 199, 212,0.3);
+
+.div1abox2b1:hover {
+    background-color: rgb(190, 199, 212, 0.3);
 }
-.div1abox4
-{
-    position: relative;
-    top: 430px;
+
+.div1abox2b2 {
+    width: 25%;
+    height: 35px;
+
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+    background-color: rgba(248, 246, 247, 0.2);
+
+
+
+}
+
+.div1abox2b2:hover {
+    background-color: rgb(190, 199, 212, 0.3);
+}
+
+.div1abox4 {
+
     display: flex;
     align-items: center;
     width: 100%;
     height: 70px;
-   
+
 }
-.div1abox4 ul{
+
+.div1abox3 {
+    margin-top: 10px;
+    display: flex;
+    width: 98%;
+    height: 660px;
+
+    border-radius: 5px;
+    margin-left: 10px;
+}
+
+.div1abox4 ul {
     width: 60%;
     height: 60%;
     list-style: none;
     display: flex;
     align-items: center;
     justify-content: space-around;
-  
+
     color: white;
     font-family: Arial, Helvetica, sans-serif;
 }
-.div1abox4 ul li button{
+
+.div1abox4 ul li button {
     width: 90px;
     height: 30px;
     border-radius: 10px;
@@ -346,34 +376,37 @@ background-color: rgba(248, 246, 247, 0.2);
     border: none;
     outline: none;
     color: white;
-     background-color: rgba(248, 246, 247, 0.2);
-     font-size: 16px;
+    background-color: rgba(248, 246, 247, 0.2);
+    font-size: 16px;
 }
-.div1b
-{
+
+.div1b {
     width: 7%;
     height: 650px;
-  
+
 }
-.div1b1{
+
+.div1b1 {
     display: flex;
     justify-content: center;
     width: 100%;
     height: 170px;
-   
+
 }
-.div1b1 ul{
+
+.div1b1 ul {
     position: relative;
     top: 15px;
 
     width: 50%;
     height: 140px;
     list-style: none;
-    
+
 }
-.div1b1 ul li{
-   margin-left: 3px;
-     margin-bottom: 10px;
+
+.div1b1 ul li {
+    margin-left: 3px;
+    margin-bottom: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -382,49 +415,145 @@ background-color: rgba(248, 246, 247, 0.2);
     height: 35px;
     color: white;
     border-radius: 50%;
-     background-color: rgba(182, 190, 206, 0.2);
-    
-}
-.div1b1 ul li:hover{
-  background-color: rgb(219, 225, 236,0.2);
-}
-.div1b2{
-    width: 100%;
-    height: 220px;
-  
+    background-color: rgba(182, 190, 206, 0.2);
+
 }
 
-.div1b2 ul{
+.div1b1 ul li:hover {
+    background-color: rgb(219, 225, 236, 0.2);
+}
+
+.div1b2 {
     width: 100%;
     height: 220px;
- 
+
+}
+
+.div1b2 ul {
+    width: 100%;
+    height: 220px;
+
     list-style: none;
 }
-.div1b2 ul li{
+
+.div1b2 ul li {
     display: flex;
     align-items: center;
     justify-content: center;
     width: 100%;
     height: 51px;
-   
-  
+
+
 }
-.div1b2 ul li:hover{
-     background-color: rgb(219, 225, 236,0.2);
+
+.div1b2 ul li:hover {
+    background-color: rgb(219, 225, 236, 0.2);
 }
-.div1b2 ul li div{
+
+.div1b2 ul li div {
     width: 36px;
     height: 36px;
- 
+
     border-radius: 50%;
     display: flex;
     align-items: center;
     justify-content: center;
     color: white;
-    background-color: rgb(47,198,246);
-    
+    background-color: rgb(47, 198, 246);
+
 }
-.icon1
-{
-    background: linear-gradient(360deg,rgb(47,198,246),rgb(89,242,87));
+
+.icon1 {
+    background: linear-gradient(360deg, rgb(47, 198, 246), rgb(89, 242, 87));
+}
+
+.morebutton {
+    display: flex;
+    align-items: center;
+    width: 280px;
+    height: 90px;
+    z-index: 2;
+    background-color: white;
+    border-radius: 10px;
+    box-shadow: 0px 0px 2px 2px gray;
+    position: absolute;
+    top: 220px;
+    left: 900px;
+}
+
+.morebutton ul {
+    list-style: none;
+    width: 98%;
+    height: 80px;
+}
+
+.morebutton ul li {
+    width: 100%;
+    height: 40px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: lightgray;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+
+.morebutton ul li:hover {
+    background-color: rgb(248, 250, 251);
+}
+
+.morebutton ul li span {
+    color: black;
+}
+
+.Extension {
+    position: absolute;
+    top: 220px;
+    left: 1350px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 230px;
+    height: 280px;
+    border-radius: 10px;
+    background-color: rgb(245, 244, 244);
+    z-index: 2;
+   
+}
+
+.Extension ul {
+    width: 92%;
+    height: 270px;
+
+
+    border-radius: 10px;
+}
+
+.Extension ul li {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    height: 35px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 19px;
+}
+
+.Extension ul li hr {
+    height: 0.5px;
+    width: 100%;
+    background-color: lightgray;
+}
+
+.Extension ul li span {
+    color: gray;
+    font-size: 15px;
+}
+
+.hr1 {
+    display: flex;
+    align-items: center;
+    width: 90px;
+    height: 10px;
+
 }
