--- a/src/Components/Booking.module.css
+++ b/src/Components/Booking.module.css
@@ -10,3 +10,44 @@
     top: 72px;
     left: 298px;
 }
+.bookingmaindiv{
+    width: 100%;
+    height: 750px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.add{
+    width: 95%;
+    height: 600px;
+    background-color: white;
+    border-radius: 10px;
+}
+.addfix{
+    margin-bottom: 5px;
+    width: 100%;
+    height: 70px;
+    display: flex;
+    /* justify-content: center; */
+    align-items: center;
+    /* position: fixed; */
+    /* background-color: red; */
+    list-style: none;
+    font-size: 20px;
+}
+.icon{
+    margin-top: 10px;
+    width: 80px;
+    height: 80px;
+    background-color: rgba(221, 224, 225);
+}
+.icon1{
+    width: 50px;
+    height: 75px;   
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.make{
+    color: rgba(24, 24, 196, 0.811);
+}
