--- a/src/Components/CRMActivities.module.css
+++ b/src/Components/CRMActivities.module.css
@@ -7,8 +7,12 @@
     display: flex;
     width: 100%;
     height: 660px;
- 
-    
+    border: 2px solid red;
+     display: flex;
+  overflow-x: auto;
+  overflow-y: hidden;
+   white-space: nowrap;
+
 }
 .box1 {
     width: 26%;
