--- a/src/Components/Marketing.module.css
+++ b/src/Components/Marketing.module.css
@@ -10,3 +10,127 @@
     top: 72px;
     left: 298px;
 }
+
+
+.marketingmaindiv {
+    width: 100%;
+    height: 700px;
+    padding: 20px;
+
+}
+
+.creatediv {
+    width: 95%;
+    height: 180px;
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+
+}
+
+.email {
+    width: 240px;
+    height: 120px;
+    background-color: white;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    list-style: none;
+    gap: 10px;
+}
+
+.c2 {
+    width: 100%;
+    height: 170px;
+    display: flex;
+    flex-direction: column;
+    list-style: none;
+}
+
+.cc {
+    font-size: 20px;
+    color: white;
+}
+.icon{
+    width: 50px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: #2bbff0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.icon1{
+    width: 50px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: #f4769c;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.icon2{
+    width: 50px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: #97cb13;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.icon3{
+    width: 50px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: #349cd0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.icon4{
+    width: 50px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: #3dc9db;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.icon5{
+    width: 50px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: #3889db;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.icon6{
+    width: 50px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: #38659f;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.icon7{
+    width: 50px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: #d56c9a;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.icon8{
+    width: 50px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: #349ed0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
