--- a/src/Components/Builder.module.css
+++ b/src/Components/Builder.module.css
@@ -4,9 +4,60 @@
 }
 .div1
 {
-      width: 81%;
+    width: 81%;
     height: 650px;
     position: absolute;
     top: 72px;
     left: 298px;
+
+    overflow-y: scroll;
+}
+
+.div1a
+{
+    width: 100%;
+    height: 80px;
+    font-family: Arial, Helvetica, sans-serif;
+    display: flex;
+    align-items: end;
+}
+.div1a p{
+
+    font-size: 35px;
+    font-weight: bold;
+    color: white;
+    position: relative;
+    left: 30px;
+    bottom: 16px;
+}
+.div1b
+{
+    width: 100%;
+    height: 850px;
+    
+}
+.box1
+{
+    width: 88%;
+    height: 750px;
+   
+    border-radius: 10px;
+    background-color: rgb(238,242,244);
+    text-align: center;
+       position: relative;
+    left: 30px;
+}
+.large{
+    font-size:35px;
+    font-family: Arial, Helvetica, sans-serif;
+    position: relative;
+    top: 60px;
+    line-height: 40px;
+}
+.small{
+    font-size:17px;
+    font-family: Arial, Helvetica, sans-serif;
+      position: relative;
+    top: 80px;
+    color: gray;
 }
