--- a/src/Components/Esignature.module.css
+++ b/src/Components/Esignature.module.css
@@ -1,12 +1,180 @@
-*{
+* {
     padding: 0px;
     margin: 0px;
 }
-.div1
-{
-      width: 81%;
+
+.div1 {
+    width: 81%;
     height: 650px;
     position: absolute;
     top: 72px;
     left: 298px;
+  
+    overflow-y: scroll;
+}
+.div1::-webkit-scrollbar{
+    width: 5px;
+}
+
+.box1 {
+    position: relative;
+    left: 20px;
+    width: 98%;
+    height: 70px;
+ 
+}
+
+.box1 ul {
+    display: flex;
+    width: 100%;
+    height: 60px;
+ 
+}
+
+.box1 ul li {
+    width: 240px;
+    display: flex;
+    align-items: center;
+   
+}
+
+.box1 ul li span {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 27px;
+    color: white;
+    font-weight: 600;
+
+}
+
+.box1 ul li button {
+    width: 85px;
+    height: 45px;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: large;
+    border: none;
+    outline: none;
+    background-color: rgb(42, 179, 115);
+    color: white;
+}
+
+.box2 {
+    position: relative;
+    left: 20px;
+    width: 98%;
+    height:auto;
+   
+}
+
+.main
+{
+    display: flex;
+    width: 94%;
+    height: 740px;
+   
+    margin-top: 10px;
+    margin-bottom: 20px;
+    border-radius: 10px;
+    background-color: white;
+    }
+.mainbox1
+{
+    width: 60%;
+    height: 740px;
+  
+}
+.mainbox1div1
+{   
+    font-family: Arial, Helvetica, sans-serif;
+    width: 100%;
+    height: 240px;
+   
+}
+.large
+{
+    text-align: center;
+    font-size: 43px;
+    color: rgb(32,102,176);
+    position: relative;
+    top: 120px;
+}
+.small
+{
+    text-align: center;
+    font-size: 30px;
+     position: relative;
+    top: 125px;
+}
+.mainbox1div2
+{
+    width: 100%;
+    height: 230px;
+    
+}
+.mainbox1div2 ul{
+    list-style: none;
+    width: 100%;
+    height: 180px;
+}
+.mainbox1div2 ul li{
+    width: 90%;
+    height: 40px;
+ 
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 17px;
+    position: relative;
+    left: 22px;
+}
+.mainbox1div2 ul li span{
+  
+    width: 30px;
+    height: 30px;
+   
+    border-radius: 50%;
+    margin-right: 10px;
+    background-color: rgb(79,201,240);
+}
+.mainbox2
+{
+    width: 40%;
+    height: 740px;
+    display: flex;
+  align-items: center;
+  justify-content: end;
+}
+.mainbox1div3
+{
+    width: 100%;
+    height:100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+}
+.start
+{
+    width: 100px;
+    height: 50px;
+    font-size: 16px;
+    border: none;
+    outline: none;
+    border-radius: 5px;
+    background-color: rgb(187,237,33);
+    
+
+}
+.LearnMore
+{
+    width: 130px;
+    height: 50px;
+    font-size: 16px;
+     border: none;
+    outline: none;
+        border-radius: 5px;
+        background-color: rgb(62,221,255);
+        color: white;
 }
